@@ -1,4 +1,4 @@
-# whatsnew-list.rb: what's new list plugin $Revision: 1.14 $
+# whatsnew-list.rb: what's new list plugin $Revision: 1.15 $
 #
 # whatsnew_list: show what's new list
 #   parameter (default):
@@ -9,7 +9,8 @@
 #      @options['apply_plugin']:
 #         if this is true, apply plugin to result. (false)
 #      @options['whatsnew_list.rdf']
-#         RDF file path. (nil)
+#         RDF file path. (nil). If this options is existent (usually
+#         'index.rdf'), this plugin will generate RDF file.
 #      @options['whatsnew_list.rdf.description']
 #         description of the site in RDF. (@html_title)
 #
@@ -117,3 +118,10 @@ add_update_proc do
 	end
 end
 
+add_header_proc {
+	if @conf['whatsnew_list.rdf'] then
+		%Q|\t<link rel="alternate" type="application/rss+xml" title="RSS" href="#{@conf['whatsnew_list.rdf']}">\n|
+	else
+		''
+	end
+}
