@@ -1,4 +1,5 @@
 2003-11-07 TADA Tadashi <sho@spc.gr.jp>
+	* plugin/whatsnew-list.rb: add information to HTML header for Auto-Discovery.
 	* plugin/whatsnew-list.rb: i18n.
 
 2003-10-24 TADA Tadashi <sho@spc.gr.jp>
